fix(navigation): fix wrapping items in right side of navigation (#5461)
* Fix wrapping items in right side of navigation

* Change the updated example to avoid conflicts with sliding navigation

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -231,6 +231,10 @@ $navigation-height: calc(map-get($line-heights, default-text) + 2 * $spv--large)
       // shift navigation items by the size of grid margin to align with grid
       .p-navigation__items:first-child {
         margin-left: calc(-1 * $sph--large);
+      }
+
+      // if there is only one navigation items list, extend it to the full width (taking into account margin shift)
+      .p-navigation__items:first-child:not(:has(+ .p-navigation__items)) {
         width: calc(100% + $sph--large);
       }
 
